<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/teal_200"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="@font/poppinsregular"
                            android:text="@string/info"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/ambil_foto_selfie"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/border_line_dotted">

                            <ImageView
                                android:id="@+id/imageSelfie"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_camera" />

                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/nama_anda"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/inputNama"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/teal_200"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/masukan_nama_anda"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/tanggal_amp_waktu"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/inputTanggal"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/teal_200"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/masukan_tanggal_dan_waktu"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/lokasi"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/inputLokasi"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/teal_200"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/masukan_lokasi"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/keterangan"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/inputKeterangan"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/teal_200"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/masukan_keterangan"
                            android:imeOptions="actionDone"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAbsen"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_200"
                android:fontFamily="@font/poppinsbold"
                android:textSize="15sp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:elevation="5dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>